<resources>
    <string name="app_name">智能管家</string>

    <string name="butler_service">服务管家</string>
    <string name="wechat">微信精选</string>
    <string name="girl">美女社区</string>
    <string name="user_center">个人中心</string>
    <string name="setting">设置</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="login">登录</string>
    <string name="sign_up">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="age">年龄</string>
    <string name="introduction">简介(可为空)</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="please_input_again">请再输入一次</string>
    <string name="email">邮箱</string>
    <string name="long_text">注册成功需要前往邮箱验证，否则无法登录！</string>
    <string name="change_password">修改密码</string>
    <string name="old_pass">旧密码</string>
    <string name="new_pass">新密码</string>
    <string name="logining">正在登陆</string>
    <string name="photo">拍照</string>
    <string name="picture">图库</string>
    <string name="cancel">取消</string>
    <string name="courier">快递查询</string>
    <string name="text_tost_empty">输入框不能为空</string>
    <string name="phone_adder">归属地查询</string>
    <string name="text_welfare">福利</string>
    <string name="update">下载更新</string>
    <string name="text_setting">设置</string>

    <string name="text_login">登录</string>
    <string name="text_registered">注册</string>
    <string name="text_forget_password">忘记密码</string>

    <string name="text_express_query">快递查询</string>
    <string name="text_belonging_query">归属地查询</string>
    <string name="text_download_update">下载更新</string>
    <string name="text_my_qrcode">我的二维码</string>
    <string name="text_my_location">我的位置</string>
    <string name="text_about_app">关于软件</string>

    <string name="text_hello_tts">你好，我是小优！</string>
    <string name="text_more_length">输入长度超出限制</string>
    <string name="text_nothing">这个人很懒，什么都没有留下！</string>
    <string name="text_editor_success">修改成功</string>
    <string name="text_editor_failure">修改失败</string>
    <string name="text_registered_successful">注册成功</string>
    <string name="text_registered_failure">注册失败：</string>
    <string name="text_two_input_not_consistent">两次输入的密码不一致</string>
    <string name="text_app_name">应用名:</string>
    <string name="text_version">版本号:</string>
    <string name="text_website_address">官网:www.imooc.com</string>
    <string name="text_email_send_ok">邮箱已经发送至：</string>
    <string name="text_email_send_no">邮箱发送失败</string>
    <string name="reset_successfully">重置密码成功</string>
    <string name="reset_failed">重置密码失败</string>
    <string name="text_test_version">"检测版本: "</string>
    <string name="text_Ddwnload_successful">下载成功</string>
    <string name="text_dwnload_failure">下载失败</string>
    <string name="text_unknown">未知</string>
    <string name="text_courier_company">快递公司</string>
    <string name="text_courier_number">快递单号</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_email">邮箱</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_keep_password">记住密码</string>
    <string name="text_input_phone">请输入号码</string>
    <string name="text_query">查询</string>
    <string name="text_user_name">用户名</string>
    <string name="text_age">年龄</string>
    <string name="text_desc">简介</string>
    <string name="text_password">密码</string>
    <string name="text_register_remind">注册成功需要前往邮箱验证，否则无法登录！</string>

    <string name="text_setting_title_1">语音播报</string>
    <string name="text_setting_title_2">智能短信提醒</string>
    <string name="text_setting_title_3">检测版本</string>
    <string name="text_setting_title_6">我的位置</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_setting_content_1">开启之后与服务管家对讲语音播报</string>
    <string name="text_setting_content_2">开启之后收到短信将弹框提示</string>
    <string name="text_setting_content_3">检查是否有新版本提示下载</string>
    <string name="text_now_login">正在登陆...</string>
    <string name="about">本项目完全开源，由wmm387学习完成，是学习RxVolley、json解析和第三方工具封装的产物。\n\n图片来源：干货集中营 http://gank.io\n其余API来源：聚合数据 https://www.juhe.cn/</string>
    <string name="git">我的Github: https://github.com/wmm387</string>
    <string name="used">用到的开源库</string>
    <string name="used_git">com.tencent.bugly:crashreport:latest.release\nde.hdodenhof:circleimageview:2.1.0\ncom.squareup.picasso:picasso:2.5.2\ncom.github.chrisbanes:PhotoView:1.3.1\ncom.kymjs.rxvolley:rxvolley:1.1.2\ncom.kymjs.rxvolley:okhttp:1.1.0\ncn.bmob.android:bmob-sdk:3.5.0\ncom.daimajia.numberprogressbar:library:1.2@aar</string>
</resources>
